#1083: add custom Launch4j JVM arguments to forked process